# LP-EDP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/extended_dataset_profile/: __init__.py  export.py  version.py
src/extended_dataset_profile/models/: version.py
src/extended_dataset_profile/models/base/: __init__.py
src/extended_dataset_profile/models/v0/: edp.py  json_reference.py  languages.py
src/extended_dataset_profile/models/v1/: __init__.py  edp.py  languages.py
src/extended_dataset_profile/types/: __init__.py  version.py
tests/: export_test.py  model_test.py  test_json_reference.py  test_languages.py  test_markdown.py  validate_license_test.py
tests/types/: test_version.py
