[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "extended-dataset-profile"
dynamic = ["version"]
description = "EDP Schema Registry for multiple versions of the JSON schema"
readme = "README.md"
authors = [{ name = "Kai Buschulte", email = "kb@beebucket.de" }]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.5"]

[project.scripts]
export_edp_schema = "extended_dataset_profile.models.v1.edp:export_edp_schema"

[project.optional-dependencies]
test = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # isort replacement
    "S", # bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = ["build", ".venv"]
check_untyped_defs = true

[tool.coverage.run]
relative_files = true
