[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "extended-dataset-profile"
dynamic = ["version"]
description = "EDP Schema Registry for multiple versions of the JSON schema"
readme = "README.md"
authors = [
    { name = "Kai Buschulte", email = "kb@beebucket.de" },
    { name = "Joshua Lauterbach", email = "jl@beebucket.de" },
]
requires-python = ">=3.11"
dependencies = ["packaging>=24.2", "pydantic>=2.10.5"]

[project.scripts]
export_edp_schema = "extended_dataset_profile:export_schema"

[project.optional-dependencies]
test = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "pydantic-markdown",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/extended_dataset_profile/_version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # isort replacement
    "S", # bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = ["build", ".venv"]
check_untyped_defs = true
sqlite_cache = true

[tool.coverage.run]
relative_files = true

[tool.uv.sources]
pydantic-markdown = { git = "https://github.com/Beebucket/pydantic_markdown", rev = "2.0.3" }
